err/xwot-py.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dicttoxml-1.6.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xmltodict-0.9.2.egg-info'...
Listing './lib/python3.5/site-packages/xwot'...
Listing './lib/python3.5/site-packages/xwot/compiler'...
Listing './lib/python3.5/site-packages/xwot/compiler/backend'...
Listing './lib/python3.5/site-packages/xwot/compiler/frontend'...
Compiling './lib/python3.5/site-packages/xwot/compiler/frontend/parser.py'...
***   File "./lib/python3.5/site-packages/xwot/compiler/frontend/parser.py", line 139
    pairs = map(lambda (key, value): (TreeWalker._parse_ns(key), value), node.attrib.items())
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xwot/device'...
Listing './lib/python3.5/site-packages/xwot/i2c'...
Listing './lib/python3.5/site-packages/xwot/preprocessor'...
Listing './lib/python3.5/site-packages/xwot/util'...
Compiling './lib/python3.5/site-packages/xwot/util/WebSocketSupport.py'...
***   File "./lib/python3.5/site-packages/xwot/util/WebSocketSupport.py", line 15
    print 'Some dependendencies are not met'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xwot_py-1.4.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
